2001-11-26  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bits.c lib/b_general.c lib/b_config.c lib/b_debug.c
	lib/b_error.c lib/b_fileutils.c lib/b_fun.c lib/b_funlist.c:
	Day one, code review.

2001-11-26  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_fileutils.c (bk_fileutils_modify_fd_flags): Added SET
	option as per Seth's suggestion.

2001-11-21  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_addrgroup.c (bk_addrgroup_get_server_socket): Get the
	server socket from the handle.
	(bk_addrgroup_server_close): Close up the server based referenced
	by the handle.
	(as_server_copy): Copy an as from the server as to the connected as.
	Adjust everybody to send server_handle on callback.
	(tcp_listen_activity): Make sure you change the state of the *new*
	as not the old.
	Convert everybody to store complete state in as.

2001-11-20  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c: Converted to use new convenient interface. State
	code removed.

	* lib/b_netutils.c (bk_netutils_make_conn): Make a connection with
	a convenient interface.
	(sss_connect_rgethost_complete): Call back when we've completed
	looking up the remote host.
	(sss_connect_lgethost_complete): Callback when we've completed
	looking up the local host.

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Call back on
	server ready.
	Convert everybody to use state.
	(bk_netutils_commandeer_service): Take over an existing server socket.
	Convert back to as->as_bag as pointer.
	(as_destroy): Destroy as completely.
	(net_init_check_sanity): Make sure you don't reference a pointer
	after you've verified that it DOESN'T EXIST!! sheesh...

2001-11-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_config.c (bk_config_get): Provide method to access config
	configuration parameters.

2001-11-20  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_addrgroup.c (tcp_end): Flag to request BAG on connection
	completion, otherwise we clean it up.
